# internal/adapters/http/docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/v1/api/tasks": {
+        "/api/v1/tasks": {
             "get": {
                 "security": [
                     {
@@ -236,7 +236,7 @@
                 }
             }
         },
-        "/v1/api/tasks/status": {
+        "/api/v1/tasks/status": {
             "patch": {
                 "security": [
                     {
@@ -304,7 +304,7 @@
                 }
             }
         },
-        "/v1/api/tasks/{public_id}": {
+        "/api/v1/tasks/{public_id}": {
             "get": {
                 "security": [
                     {
@@ -461,7 +461,7 @@
                 }
             }
         },
-        "/v1/api/tasks/{public_id}/status": {
+        "/api/v1/tasks/{public_id}/status": {
             "patch": {
                 "security": [
                     {
