# internal/adapters/http/handler/task/create.go
@@ -21,7 +21,7 @@ import (
 // @Success      201 {object} response.Success{data=response.IDResponse}
 // @Failure      400 {object} response.Error{errors=taskresp.CreateValidateError}
 // @Failure      500 {object} response.Error
-// @Router       /v1/api/tasks [post]
+// @Router       /api/v1/tasks [post]
 func (h *Handler) Create(c *fiber.Ctx) error {
 	log := httpctx.Get(c, h.log)
 	rid := httpctx.GetRequestID(c)
