# internal/adapters/http/handler/task/get_by_public_id.go
@@ -19,7 +19,7 @@ import (
 // @Success      200  {object} response.Success{data=taskresp.Detail}
 // @Failure      400  {object} response.Error
 // @Failure      404  {object} response.Error
-// @Router       /v1/api/tasks/{public_id} [get]
+// @Router       /api/v1/tasks/{public_id} [get]
 func (h *Handler) GetByPublicID(c *fiber.Ctx) error {
 	log := httpctx.Get(c, h.log)
 	rid := httpctx.GetRequestID(c)
